# medHarness2

./: .gitignore  Makefile  README.md  package-lock.json  package.json  playwright.config.mjs  pyproject.toml
config/: codex_dmx_strong.yaml  codex_proxy_strong.yaml  codex_triple_strong.yaml  codex_yunwu_strong.yaml  default.yaml  dmx_strong.yaml  example.yaml  formal_benchmark.yaml  local_hf_qwen3vl4b.yaml  yunwu_codex_strong.yaml  yunwu_qwen_ocr_exploratory.yaml  yunwu_strong.yaml
designs/: 2026-01-29_00-55_ours_flat_filled.json  README.md  ours_flat.json
docs/: blindspot_audit_20260714.md  blindspot_audit_plain_language_20260724.md  braingemma3d_real_ocr_mri_brain_7_20260606.md  ct_chest_real_ocr_artifact_7_20260606.md  cxr_chest_two_fresh_models_smoke_20260606.md  cxr_real_ocr_three_fresh_11_20260606.md  decision_log.md  design_implementation_audit_20260606.md  implementation_details_and_outputs.md  llm_tooling_upgrade_20260710.md  llm_tools_synthetic_smoke_20260710.json  local_hf_fallback_remaining_20_20260606.md  local_vlm_ocr_status_20260606.md  maira2_batch_cxr_chest_2_20260606.md  maira2_real_ocr_cxr_chest_2_20260606.md  maira2_sample_cr_chest_smoke_20260606.md  maira2_smoke_2026-05-30.md  merlin_brain_gemma3d_smoke_20260606.md  merlin_real_ocr_ct_abdomen_2_20260606.md  merlin_real_ocr_ct_abdomen_7_20260606.md  mvp_usage.md  ocr_model_selection_20260715.md  project_status.yaml  real_clinician_handoff_20260717.md  report_generation_routing_fusion_execution_plan_20260723.md  research_pipeline_status_20260717.md  research_v1_implementation_handoff.md  sample_data_2026-06-05_artifact_only_20260606.md  sample_data_2026-06-05_final_local_routed_52_20260606.md  sample_data_2026-06-05_local_route_plan_20260606.md  sample_data_2026-06-05_maira2_fresh_20260606.md  sample_data_2026-06-05_mock_smoke.md  sample_data_2026-06-05_real_ocr_qwen3vl4b_20260606.md  sample_data_2026-06-05_sample_full_20260605_mock.md  weekly_report_2026-05-30.md  weekly_report_2026-06-06.md  workflow_case_analysis_20260606.md
notion/: notion_doc_full.md
tests/: test_analyze_run.py  test_api.py  test_catalog_and_registry.py  test_checkpoints.py  test_config.py  test_experiments_dashboard_figures.py  test_external_payloads.py  test_full_design.py  test_legacy_integration.py  test_live_smoke.py  test_llm_client.py  test_merge_batches.py  test_modality_routing.py  test_ocr_pipeline.py  test_preflight.py  (+20 more)
(+200 files in other folders)
