[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "medharness2"
version = "0.1.0"
description = "MVP radiology report evaluation harness"
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0",
]

[project.optional-dependencies]
api = [
  "fastapi>=0.110",
  "uvicorn>=0.29",
]
test = [
  "fastapi>=0.110",
  "httpx>=0.27",
  "pytest>=8.0",
]

[project.scripts]
medharness2 = "medharness2.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
