[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "medharness2"
version = "0.1.0"
description = "MVP radiology report evaluation harness"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.10",
  "PyYAML>=6.0",
  "requests>=2.31",
]

[project.optional-dependencies]
api = [
  "fastapi>=0.110",
  "uvicorn>=0.29",
]
data = [
  "PyMuPDF>=1.24",
  "SimpleITK>=2.3",
  "pandas>=2.0",
  "openpyxl>=3.1",
  "pydicom>=3.0",
  "Pillow>=10.0",
  "numpy>=1.26",
  "h5py>=3.11",
]
test = [
  "fastapi>=0.110",
  "httpx>=0.27",
  "PyMuPDF>=1.24",
  "pytest>=8.0",
]
ocr-paddle = [
  "paddleocr[doc-parser]>=3.7,<3.8",
]

[project.scripts]
medharness2 = "medharness2.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
medharness2 = ["templates/*.html", "templates/*.json"]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
pythonpath = ["src"]
testpaths = ["tests"]
